ALU test vector finished

--- a/Code/logic_part/logic_module/Makefile
+++ b/Code/logic_part/logic_module/Makefile
@@ -1,5 +1,5 @@
 do:
-	iverilog -o a.out Logic_tb.v Logic.v ../and/and.v ../nor/nor.v ../or/or.v ../xor/xor.v
+	iverilog -o a.out Logic_tb.v Logic_.v ../and/and_.v ../nor/nor_.v ../or/or_.v ../xor/xor_.v
 	vvp a.out
 clean:
 	rm a.out
