--- a/Code/arithmetic_part/Makefile
+++ b/Code/arithmetic_part/Makefile
@@ -1,5 +1,5 @@
 do:
-	iverilog -o a.out arithmetic_tb.v Arithmetic.v full_adder.v ripple_carry_adder.v
+	iverilog -o a.out arithmetic_tb.v Arithmetic_.v full_adder.v ripple_carry_adder.v
 	vvp a.out
 clean:
 	rm a.out
