ALU GOES BRRRRRR

--- a/single_cycle_processor/Makefile
+++ b/single_cycle_processor/Makefile
@@ -1,3 +1,4 @@
 do:
-		 iverilog.exe -o a.out mips/mips_tb.v mips/*_.v mips/alu/*_.v mips/alu/comparison_part/*_.v mips/alu/logic_part/*_.v 
+		 iverilog.exe -o a.out mips/mips_tb.v mips/*_.v mips/alu/*_.v mips/alu/comparison_part/*_.v mips/alu/logic_part/*_.v
+		 iverilog.exe -o a.out mips/alu/alu_tb.v mips/alu/*_.v mips/alu/comparison_part/*_.v mips/alu/logic_part/*_.v mips/utilities_.v
 		 vvp a.out
