--- a/scp/Makefile
+++ b/scp/Makefile
@@ -1,3 +1,5 @@
 do:
 		iverilog.exe -o a.out mips_tb.v *_.v alu/*_.v alu/comparison_part/*_.v alu/logic_part/*_.v
 		iverilog.exe -o a.out alu/*_.v alu/comparison_part/*_.v alu/logic_part/*_.v alu/alu_tb.v
+clean:
+		rm a.out
